--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,16 @@
+:root{
+  --font:'Montserrat',sans-serif;
+  --white: #fff;
+  --black:#000;
+  --gray:#e2e2e2;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: var(--font);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--gray);
 }
 
 code {
