--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   font-family: var(--font);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--gray);
+  background-color: var(--white);
 }
 
 code {
