--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,7 +1,7 @@
 .container{
     padding: 0 0 1em 0;
-    margin-top: .5em;
-    width: 202px;
+    margin-top: 1em;
+    width: 282px;
     background-color: var(--gray);
     display: flex;
     flex-direction: column;
